# Real-Time-Fraud-Detection-Command-Center

./: .dockerignore  .gitignore  Dockerfile  README.md  docker-compose.yaml  pyproject.toml  requirements.txt
config/: config.yaml
monitoring/powerbi/: README.md  powerbi_dashboard_model.json  powerbi_dashboard_report.json
scripts/: dashboard.py  engineer_features.py  evaluate.py  generate_monitoring.py  ingest.py  run_pipeline.py  serve.py  train.py
src/fraud_detection/: __init__.py  config.py  evaluation.py  features.py  ingestion.py  monitoring.py  pipeline.py  serving.py  training.py  utils.py
