[build-system]
requires = ["setuptools>=68", "wheel"]
build-backend = "setuptools.build_meta"

[project]
name = "real-time-fraud-detection"
version = "0.1.0"
description = "End-to-end real-time fraud detection system with synthetic/Kaggle ingestion, feature engineering, MLflow-tracked training, FastAPI serving, Docker, and Power BI monitoring assets."
requires-python = ">=3.10"
dependencies = [
  "pandas>=2.1",
  "numpy>=1.24",
  "scikit-learn>=1.4",
  "xgboost>=2.0",
  "lightgbm>=4.0",
  "imbalanced-learn>=0.12",
  "optuna>=3.5",
  "mlflow>=2.12",
  "fastapi>=0.110",
  "uvicorn[standard]>=0.27",
  "pydantic>=2.6",
  "pyyaml>=6.0",
  "joblib>=1.3",
  "scipy>=1.11",
  "pyarrow>=14.0",
  "matplotlib>=3.8",
  "kaggle>=1.6",
  "streamlit>=1.32",
  "requests>=2.31",
  "plotly>=5.20"
]

[tool.setuptools.packages.find]
where = ["src"]
